Small refinements and Javadoc